2007-01-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(parse_stream_info), (has_subp), (get_stream_info_objects_for_type),
	(get_lang_list_for_type), (bacon_video_widget_get_subtitles),
	(bacon_video_widget_get_languages):
	  Refactor stream-info parsing bits a bit; in particular, retrieve the
	  stream-info objects as GValueArray, since that way we get the stream
	  info objects already ref'ed and don't need to worry about
	  thread-safety.

2007-01-30  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp: Remove use of __FUNCTION__
	as it's not portable, patch by Damien Carbery (Closes: #402163)

2007-01-30  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add video/x-theora+ogg to the list of supported
	mime-types

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* data/schemas.sh: remove extraneous "grep -v" in the audio listing,
	spotted by Saleem Abdulrasool (Closes: #402193)

============ Version 2.17.90

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.17.90

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_state):
	Avoid warnings when changing playstate and hidden (again!)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-qt.c:
	(totem_pl_parser_add_quicktime_rtsptextrtsp): Handle DOS QuickTime
	link files (Closes: #402040)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (add_lang_action), (create_lang_actions):
	Avoid leaking data from the language hash-table, escape languages
	before putting them in the subtitles or languages menu

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (escape_label_for_menu),
	(totem_recent_manager_changed_callback), (add_device_to_menu):
	Truncate the URI before escaping it for use in the menu items,