@@ -288,17 +288,18 @@ create_lang_actions (Totem *totem, GtkActionGroup *action_group, guint ui_id,
 			_("Auto"), -1, &group);
 
 	i = 0;
-	lookup = g_hash_table_new_full (g_str_hash, g_int_equal, g_free, NULL);
+	lookup = g_hash_table_new_full (g_str_hash, g_str_equal, NULL, NULL);
 
 	for (l = list; l != NULL; l = l->next)
 	{
 		hash_value = g_hash_table_lookup (lookup, l->data);
 		if (hash_value == NULL) {
 			action_data = g_strdup (l->data);
-			g_hash_table_insert (lookup, l->data, (unsigned int *)1);
+			g_hash_table_insert (lookup, l->data, GINT_TO_POINTER (1));
 		} else {
-			action_data = g_strdup_printf ("%s #%u", (char *)l->data, (unsigned int)hash_value+1);
-			g_hash_table_replace (lookup, l->data, (unsigned int *)((unsigned int)hash_value+1));
+			guint num = GPOINTER_TO_INT (hash_value);
+			action_data = g_strdup_printf ("%s #%u", (char *)l->data, num + 1);
+			g_hash_table_replace (lookup, l->data, GINT_TO_POINTER (num + 1));
 		}
 
 		add_lang_action (totem, action_group, ui_id, path, prefix,
